--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,8 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: npm dependencies
-        run: npm install
+      - run: npm install
       - run: 'npm run build --prod'
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
