--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~12.2.16",
     "firebase": "^7.0 || ^8.0",
     "rxjs": "~6.6.0",
+    "swiper": "^8.2.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
